force-app/main/default/objects/PHSS_Custom_Metadata__mdt/PHSS_Custom_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>PHSS Custom Metadata</label>
    <pluralLabel>PHSS Custom Metadata</pluralLabel>
</CustomObject>