force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/Bucket_Account_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Account_Name_Prefix__c</fullName>
    <label>Bucket Account Name Prefix</label>
    <length>192</length>
    <type>Text</type>
</CustomField>