force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/Certification_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Certification_Error_Message__c</fullName>
    <label>Certification Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>