force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/CertificationProvisioningTriggerDebug__c.field-meta.xml
<CustomField>
    <fullName>CertificationProvisioningTriggerDebug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE then records in PHSS_Certification_Provisioning__c will NOT be deleted after processing</description>
    <inlineHelpText>If TRUE then records in PHSS_Certification_Provisioning__c will NOT be deleted after processing</inlineHelpText>
    <label>Certification Provisioning Trigger Debug</label>
    <type>Checkbox</type>
</CustomField>