force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/Default_Email_Encoding_Key__c.field-meta.xml
<CustomField>
    <fullName>Default_Email_Encoding_Key__c</fullName>
    <description>Default - ISO-8859-1</description>
    <label>Default Email Encoding Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>