force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/Default_Language_Key__c.field-meta.xml
<CustomField>
    <fullName>Default_Language_Key__c</fullName>
    <description>Default - en_US</description>
    <label>Default Language Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>