force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/Default_Timezone_Key__c.field-meta.xml
<CustomField>
    <fullName>Default_Timezone_Key__c</fullName>
    <description>Default - America/New_York</description>
    <label>Default Timezone Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>