force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/Marked_As_Resource_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Marked_As_Resource_Group_Name__c</fullName>
    <label>Marked_As_Resource_Group_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>