force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/Maximum_Contacts_Per_Account__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Contacts_Per_Account__c</fullName>
    <label>Maximum Contacts Per Account</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>