force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/Prevent_User_Provisioning_Email__c.field-meta.xml
<CustomField>
    <fullName>Prevent_User_Provisioning_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent User Provisioning Email</label>
    <type>Checkbox</type>
</CustomField>