force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>