force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/User_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Error_Message__c</fullName>
    <label>User Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>