force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/Username_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Username_Suffix__c</fullName>
    <label>Username_Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>