force-app/main/default/objects/PHSS_Custom_Metadata__mdt/fields/UserProvisioningTriggerDebug__c.field-meta.xml
<CustomField>
    <fullName>UserProvisioningTriggerDebug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE then records in PHSS_User_Provisioning__c will NOT be deleted after processing</description>
    <inlineHelpText>If TRUE then records in PHSS_User_Provisioning__c will NOT be deleted after processing</inlineHelpText>
    <label>User Provisioning Trigger Debug</label>
    <type>Checkbox</type>
</CustomField>